--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <a href="#leagues">Leagues</a>
   <a href="#devs">For devs</a>
   <a href="#roadmap">Roadmap</a>
+  <a href="app.html">App</a>
 </nav>
     </header>
 
