--- a/index.html
+++ b/index.html
@@ -46,26 +46,18 @@
           </p>
         </div>
         <div class="hero-panel">
-          <div class="panel-title">LIVE SCOREBOARD</div>
-          <div class="panel-row header">
-            <span>League</span>
-            <span>Match</span>
-            <span>Score</span>
-            <span>Status</span>
-          </div>
-          <div class="panel-row">
-            <span>Premier</span>
-            <span>CHE vs ARS</span>
-            <span>2 – 1</span>
-            <span class="status finished">ON-CHAIN</span>
-          </div>
-          <div class="panel-row">
-            <span>La Liga</span>
-            <span>RMA vs BAR</span>
-            <span>3 – 2</span>
-            <span class="status pending">PENDING</span>
-          </div>
-          <div class="panel-foot">Demo data – real feed coming soon.</div>
+         <div class="panel-title">LIVE SCOREBOARD</div>
+<div class="panel-row header">
+  <span>League</span>
+  <span>Match</span>
+  <span>Score</span>
+  <span>Status</span>
+</div>
+
+<!-- qui dentro JS inietterà le partite -->
+<div id="score-rotator"></div>
+
+<div class="panel-foot">Demo data – real feed coming soon.</div>
         </div>
       </section>
 
