--- a/app.html
+++ b/app.html
@@ -120,7 +120,10 @@
                 <span class="bnb-dot"></span>
                 <span>BNB status: ready to publish</span>
               </div>
-              <button class="btn tiny bsc-btn">BscScan ▸</button>
+              <a class="bscscan-link" href="#" target="_blank">
+  <img src="https://bscscan.com/images/logo-bscscan.svg" alt="bscscan" class="bscscan-icon">
+  <span>Scan</span>
+</a>
             </footer>
           </article>
 
