--- a/app.html
+++ b/app.html
@@ -209,7 +209,7 @@
             </footer>
         </article>
 
-        <!-- CARD 4 -->
+<!-- CARD 4 -->
         <article class="match-card">
             <header class="match-header">
                 <span class="badge league-badge laliga">La Liga</span>
@@ -230,19 +230,16 @@
             </div>
 
             <footer class="match-footer">
-               
+                <div class="bnb-status">
+                    <span class="bnb-dot"></span>
+                    BNB status: not started
+                </div>
+                <button class="bscscan-btn">BSCSCAN</button>
             </footer>
         </article>
 
     </div>
 </section>
-
-            <footer class="match-footer">
-              
-            </footer>
-          </article>
-        </div>
-      </section>
     </main>
 
     <footer class="site-footer">
