--- a/app.html
+++ b/app.html
@@ -113,7 +113,10 @@
                     <span class="bnb-dot"></span>
                     BNB status: ready to publish
                 </div>
-                <button class="bscscan-btn">BSCSCAN</button>
+                <button class="btn-bscscan">
+  <img src="bscscan-logo.svg" class="bscscan-logo" alt="BscScan">
+  <span>BscScan</span>
+</button
             </footer>
         </article>
 
@@ -158,7 +161,10 @@
                     <span class="bnb-dot"></span>
                     BNB status: queued for oracle
                 </div>
-                <button class="bscscan-btn">BSCSCAN</button>
+                <button class="btn-bscscan">
+  <img src="bscscan-logo.svg" class="bscscan-logo" alt="BscScan">
+  <span>BscScan</span>
+</button
             </footer>
         </article>
 
@@ -205,7 +211,10 @@
                     <span class="bnb-dot"></span>
                     BNB status: waiting for final
                 </div>
-                <button class="bscscan-btn">BSCSCAN</button>
+                <button class="btn-bscscan">
+  <img src="bscscan-logo.svg" class="bscscan-logo" alt="BscScan">
+  <span>BscScan</span>
+</button
             </footer>
         </article>
 
@@ -234,7 +243,10 @@
                     <span class="bnb-dot"></span>
                     BNB status: not started
                 </div>
-                <button class="bscscan-btn">BSCSCAN</button>
+                <button class="btn-bscscan">
+  <img src="bscscan-logo.svg" class="bscscan-logo" alt="BscScan">
+  <span>BscScan</span>
+</button
             </footer>
         </article>
 
