--- a/app.html
+++ b/app.html
@@ -113,10 +113,9 @@
                     <span class="bnb-dot"></span>
                     BNB status: ready to publish
                 </div>
-                <button class="btn-bscscan">
-  <img src="bscscan-logo.svg" class="bscscan-logo" alt="BscScan">
-  <span>BscScan</span>
-</button
+               <button class="btn-bscscan">
+  <img src="bscscan.png" alt="BscScan logo">
+</button>
             </footer>
         </article>
 
@@ -162,9 +161,8 @@
                     BNB status: queued for oracle
                 </div>
                 <button class="btn-bscscan">
-  <img src="bscscan-logo.svg" class="bscscan-logo" alt="BscScan">
-  <span>BscScan</span>
-</button
+  <img src="bscscan.png" alt="BscScan logo">
+</button>
             </footer>
         </article>
 
@@ -212,9 +210,8 @@
                     BNB status: waiting for final
                 </div>
                 <button class="btn-bscscan">
-  <img src="bscscan-logo.svg" class="bscscan-logo" alt="BscScan">
-  <span>BscScan</span>
-</button
+  <img src="bscscan.png" alt="BscScan logo">
+</button>
             </footer>
         </article>
 
@@ -244,9 +241,8 @@
                     BNB status: not started
                 </div>
                 <button class="btn-bscscan">
-  <img src="bscscan-logo.svg" class="bscscan-logo" alt="BscScan">
-  <span>BscScan</span>
-</button
+  <img src="bscscan.png" alt="BscScan logo">
+</button>
             </footer>
         </article>
 
