--- a/app.html
+++ b/app.html
@@ -114,7 +114,8 @@
                     BNB status: ready to publish
                 </div>
                <button class="btn-bscscan">
-  <img src="bscscan.png" alt="BscScan logo">
+  <img src="bscscan.png" alt="BscScan logo" class="bscscan-icon">
+  <span class="bscscan-text">BscScan</span>
 </button>
             </footer>
         </article>
@@ -161,7 +162,8 @@
                     BNB status: queued for oracle
                 </div>
                 <button class="btn-bscscan">
-  <img src="bscscan.png" alt="BscScan logo">
+  <img src="bscscan.png" alt="BscScan logo" class="bscscan-icon">
+  <span class="bscscan-text">BscScan</span>
 </button>
             </footer>
         </article>
@@ -210,7 +212,8 @@
                     BNB status: waiting for final
                 </div>
                 <button class="btn-bscscan">
-  <img src="bscscan.png" alt="BscScan logo">
+  <img src="bscscan.png" alt="BscScan logo" class="bscscan-icon">
+  <span class="bscscan-text">BscScan</span>
 </button>
             </footer>
         </article>
@@ -241,7 +244,8 @@
                     BNB status: not started
                 </div>
                 <button class="btn-bscscan">
-  <img src="bscscan.png" alt="BscScan logo">
+  <img src="bscscan.png" alt="BscScan logo" class="bscscan-icon">
+  <span class="bscscan-text">BscScan</span>
 </button>
             </footer>
         </article>
