--- a/index.html
+++ b/index.html
@@ -1,270 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>ScoreFeed – Football Oracle on BNB</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="ScoreFeed is a football oracle that publishes verified Premier League & La Liga results on BNB Chain."
-    />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div class="scanlines"></div>
-    <header class="site-header">
-      <div class="logo">
-        <span class="logo-mark">SF</span>
-        <span class="logo-text">ScoreFeed</span>
+<head>
+  <meta charset="UTF-8" />
+  <title>ScoreFeed – Football Oracle on BNB</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+    name="description"
+    content="ScoreFeed is a football-native oracle that publishes verified Premier League & La Liga match results on BNB Chain for prediction markets, dApps and AI agents."
+  />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <div class="scanlines"></div>
+
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="logo">
+      <span class="logo-mark">SF</span>
+      <span class="logo-text">ScoreFeed</span>
+    </div>
+    <nav class="nav">
+      <a href="#about">About</a>
+      <a href="#how">How it works</a>
+      <a href="#leagues">Leagues</a>
+      <a href="#devs">For devs</a>
+      <a href="#roadmap">Roadmap</a>
+      <a href="app.html">App</a>
+    </nav>
+  </header>
+
+  <main>
+    <!-- HERO -->
+    <section class="hero">
+      <div class="hero-main">
+        <h1>On-chain Football Score Oracle</h1>
+        <p class="hero-lead">
+          Retro scoreboard vibes. Web3-native data.<br />
+          ScoreFeed publishes verified Premier League &amp; La Liga results on BNB Chain.
+        </p>
+
+        <div class="hero-cta">
+          <a href="#devs" class="btn primary">For developers</a>
+          <a href="app.html" class="btn ghost">Open app</a>
+        </div>
+
+        <p class="hero-note">
+          Humans read scores. Smart contracts need data.<br />
+          ScoreFeed brings real football results on-chain.
+        </p>
       </div>
-      <nav class="nav">
-  <a href="#about">About</a>
-  <a href="#how">How it works</a>
-  <a href="#leagues">Leagues</a>
-  <a href="#devs">For devs</a>
-  <a href="#roadmap">Roadmap</a>
-  <a href="app.html">App</a>
-</nav>
-    </header>
 
-    <main>
-      <!-- HERO -->
-      <section class="hero">
-        <div class="hero-text">
-          <h1>On-Chain Football Score Oracle</h1>
-          <p class="tagline">
-            Retro scoreboard vibes. Web3 power.<br />
-            Verified Premier League &amp; La Liga results on BNB Chain.
+      <!-- LIVE SCOREBOARD PANEL (demo) -->
+      <div class="hero-panel">
+        <div class="panel-title">LIVE SCOREBOARD</div>
+        <div class="panel-row header">
+          <span>League</span>
+          <span>Match</span>
+          <span>Score</span>
+          <span>Status</span>
+        </div>
+
+        <div id="score-rotator">
+          <div class="panel-row">
+            <span>Premier League</span>
+            <span>Chelsea – Arsenal</span>
+            <span>2 – 1</span>
+            <span class="status-pill status-onchain">On-chain</span>
+          </div>
+          <div class="panel-row">
+            <span>La Liga</span>
+            <span>Real Madrid – Barcelona</span>
+            <span>1 – 1</span>
+            <span class="status-pill status-live">Live</span>
+          </div>
+          <div class="panel-row">
+            <span>Premier League</span>
+            <span>Liverpool – Spurs</span>
+            <span>3 – 0</span>
+            <span class="status-pill status-finished">Final</span>
+          </div>
+        </div>
+
+        <div class="panel-foot">
+          Live UI preview. Oracle feed and on-chain data coming as the MVP goes live.
+        </div>
+      </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section id="about" class="section">
+      <h2>What is ScoreFeed?</h2>
+      <p>
+        ScoreFeed is a football-first oracle that publishes verified match results on BNB Chain.
+        We focus on top-tier leagues and clean, structured data – starting with the Premier League
+        and La Liga.
+      </p>
+
+      <div class="grid">
+        <div class="card">
+          <h3>Football-native</h3>
+          <p>
+            Scores, scorers, goal minutes and cards packaged for Web3 builders, not just human viewers.
           </p>
-          <div class="hero-buttons">
-            <a href="#devs" class="btn primary">For developers</a>
-            <a href="#about" class="btn ghost">Learn more</a>
-          </div>
-          <p class="hero-sub">
-            Humans read scores. Smart contracts need data.<br />
-            ScoreFeed brings real football results on-chain.
+        </div>
+        <div class="card">
+          <h3>Oracle-ready</h3>
+          <p>
+            Data is fetched from multiple trusted providers, cross-checked and normalized before being
+            pushed on-chain.
           </p>
         </div>
-        <div class="hero-panel">
-         <div class="panel-title">LIVE SCOREBOARD</div>
-<div class="panel-row header">
-  <span>League</span>
-  <span>Match</span>
-  <span>Score</span>
-  <span>Status</span>
-</div>
-
-<!-- qui dentro JS inietterà le partite -->
-<div id="score-rotator"></div>
-
-<div class="panel-foot">Demo data – real feed coming soon.</div>
+        <div class="card">
+          <h3>Built on BNB Chain</h3>
+          <p>
+            Low fees and EVM compatibility, ideal for prediction markets, betting dApps and AI agents that
+            need reliable football data.
+          </p>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <!-- ABOUT -->
-      <section id="about" class="section">
-        <h2>What is ScoreFeed?</h2>
-        <p>
-          ScoreFeed is a football-first oracle that publishes verified match
-          results on BNB Chain. We focus on top-tier leagues only, starting with
-          Premier League and La Liga.
-        </p>
-        <div class="grid">
-          <div class="card">
-            <h3>Football-native</h3>
-            <p>
-              Scores, scorers, goal minutes and cards – packaged for Web3
-              builders, not just human viewers.
-            </p>
-          </div>
-          <div class="card">
-            <h3>AI-verified</h3>
-            <p>
-              Data is fetched from multiple providers and validated with AI
-              before being pushed on-chain.
-            </p>
-          </div>
-          <div class="card">
-            <h3>Built on BNB</h3>
-            <p>
-              Low gas, EVM compatible and ready for prediction markets, dApps
-              and AI agents.
-            </p>
-          </div>
+    <!-- HOW IT WORKS -->
+    <section id="how" class="section">
+      <h2>How it works</h2>
+      <div class="steps">
+        <div class="step">
+          <div class="step-number">1</div>
+          <h3>Collect</h3>
+          <p>
+            We fetch match data from multiple trusted football data providers for the leagues we cover.
+          </p>
         </div>
-      </section>
-
-      <!-- HOW IT WORKS -->
-      <section id="how" class="section">
-        <h2>How it works</h2>
-        <div class="steps">
-          <div class="step">
-            <div class="step-number">1</div>
-            <h3>Collect</h3>
-            <p>
-              We fetch match data from multiple trusted football data providers
-              for Premier League and La Liga.
-            </p>
-          </div>
-          <div class="step">
-            <div class="step-number">2</div>
-            <h3>Validate</h3>
-            <p>
-              Our AI engine cross-checks sources, cleans player names and
-              normalises event minutes.
-            </p>
-          </div>
-          <div class="step"><div class="step-number">3</div>
-            <h3>Publish</h3>
-            <p>
-              Final, verified match results are published to the ScoreFeed
-              oracle contract on BNB and exposed via API.
-            </p>
-          </div>
+        <div class="step">
+          <div class="step-number">2</div>
+          <h3>Validate</h3>
+          <p>
+            Our engine cross-checks sources, cleans player names and normalizes events into a stable schema.
+          </p>
         </div>
-      </section>
-
-      <!-- LEAGUES -->
-      <section id="leagues" class="section">
-        <h2>Leagues we cover (MVP)</h2>
-        <div class="grid">
-          <div class="card league">
-            <h3>Premier League</h3>
-            <p>All matches, full-time scores, scorers, minutes and cards.</p>
-          </div>
-          <div class="card league">
-            <h3>La Liga</h3>
-            <p>Same coverage, same oracle – different country.</p>
-          </div>
+        <div class="step">
+          <div class="step-number">3</div>
+          <h3>Publish</h3>
+          <p>
+            Final, verified match results are published to the ScoreFeed oracle contract on BNB Chain and
+            exposed via API.
+          </p>
         </div>
-        <p class="coming-soon">
-          Coming soon: Serie A, Bundesliga, Ligue 1, MLS.
-        </p>
-      </section>
+      </div>
+    </section>
 
-      <!-- DEVELOPERS -->
-      <section id="devs" class="section">
-        <h2>For developers</h2>
-        <p>
-          Integrating ScoreFeed is simple. Read match data directly from the
-          BNB smart contract or from our REST API.
-        </p>
-        <div class="grid dev-grid">
-          <div class="card code-block">
-            <h3>On-chain (Solidity)</h3>
-            <pre><code>// pseudo-interface
-interface IScoreFeed {
-  function getMatch(uint256 matchId)
-    external
-    view
-    returns (
-      uint8 homeGoals,
-      uint8 awayGoals,
-      uint64 verifiedAt
-    );
-}</code></pre>
-          </div>
-          <div class="card code-block">
-            <h3>REST API (JSON)</h3>
-            <pre><code>GET /api/matches/{matchId}
-
-{
-  "matchId": 123456,
-  "league": "Premier League",
-  "homeTeam": "Chelsea",
-  "awayTeam": "Arsenal",
-  "homeGoals": 2,
-  "awayGoals": 1,
-  "status": "finished"
-}</code></pre>
-          </div>
+    <!-- LEAGUES -->
+    <section id="leagues" class="section">
+      <h2>Leagues we cover</h2>
+      <div class="grid">
+        <div class="card league">
+          <h3>Premier League</h3>
+          <p>All matches, full-time scores, scorers, minutes and cards.</p>
         </div>
-        <p class="note">
-          Testnet contract &amp; full docs coming as soon as the MVP oracle is
-          live.
-        </p>
-      </section>
-    </main>
+        <div class="card league">
+          <h3>La Liga</h3>
+          <p>Same coverage, different country. Data normalized into one shared schema.</p>
+        </div>
+        <div class="card league">
+          <h3>Next up</h3>
+          <p>Planned expansion to Serie A, Bundesliga, Ligue 1 and MLS.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOR DEVS -->
+    <section id="devs" class="section">
+      <h2>For developers</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>On-chain oracle</h3>
+          <p>
+            Solidity smart contract on BNB Chain that exposes a clean interface for reading match results.
+          </p>
+        </div>
+        <div class="card">
+          <h3>Data schema</h3>
+          <p>
+            Stable IDs for leagues, matches and events. Football data structured for composable dApps.
+          </p>
+        </div>
+        <div class="card">
+          <h3>Integration-ready</h3>
+          <p>
+            Built for prediction markets, betting protocols, fantasy games and AI agents that need
+            deterministic football data.
+          </p>
+        </div>
+      </div>
+      <p class="note">
+        Full docs and contract ABI will be published when the MVP oracle is live on BNB mainnet.
+      </p>
+    </section>
+
     <!-- ROADMAP -->
-      <section id="roadmap" class="section">
-        <h2>Roadmap</h2>
-        <p>
-          ScoreFeed is starting small and focused, then expanding to more
-          leagues, features and integrations. This is the current MVP roadmap.
-        </p>
+    <section id="roadmap" class="section">
+      <h2>Roadmap</h2>
+      <p>
+        ScoreFeed is starting focused and lean, then expanding to more leagues, features and integrations.
+      </p>
 
-        <div class="grid">
-          <div class="card">
-            <h3>Phase 1 – MVP Online</h3>
-            <p>
-              Static site, brand and landing page live on Vercel. Premier League
-              &amp; La Liga defined as initial focus, with clear data model for
-              scores, scorers, minutes and cards.
-            </p>
-          </div>
-
-          <div class="card">
-            <h3>Phase 2 – Oracle Engine</h3>
-            <p>
-              Backend connects to multiple football data providers. AI layer
-              validates events and prepares final results ready to be pushed
-              on-chain on BNB testnet.
-            </p>
-          </div>
-
-          <div class="card">
-            <h3>Phase 3 – On-Chain &amp; Dashboard</h3>
-            <p>
-              ScoreFeed oracle contract deployed on BNB mainnet. Matches
-              published automatically. Public dashboard lists fixtures and
-              results, with links to on-chain data.
-            </p>
-          </div>
-
-          <div class="card">
-            <h3>Phase 4 – More Leagues &amp; Integrations</h3>
-            <p>
-              Add Serie A, Bundesliga, Ligue 1 and MLS. Open up API access and
-              paid plans for prediction markets, dApps and AI agents that need
-              reliable football data.
-            </p>
-          </div>
+      <div class="grid">
+        <div class="card">
+          <h3>Phase 1 – Core oracle</h3>
+          <p>
+            Static site, brand and public app live on Vercel. Premier League &amp; La Liga defined as the
+            initial focus with a clear data model for scores, scorers, minutes and cards.
+          </p>
         </div>
-</section>
+        <div class="card">
+          <h3>Phase 2 – More leagues</h3>
+          <p>
+            Add Serie A, Bundesliga, Ligue 1 and MLS. Expand coverage while keeping one consistent data schema.
+          </p>
+        </div>
+        <div class="card">
+          <h3>Phase 3 – APIs &amp; tools</h3>
+          <p>
+            Public HTTP API, SDKs and dashboards for builders. Match history, on-chain links and developer
+            analytics.
+          </p>
+        </div>
+        <div class="card">
+          <h3>Phase 4 – Ecosystem</h3>
+          <p>
+            Dedicated plans for prediction markets, bookmakers, fantasy platforms and AI projects that need
+            football data with on-chain guarantees.
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
 
-<!-- SCRIPT PER SCORRIMENTO PARTITE -->
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-  const rows = document.querySelectorAll(".match-card");
-  let currentIndex = 0;
-  const batchSize = 3;
-
-  function updateVisibleMatches() {
-    rows.forEach((row, index) => {
-      const start = currentIndex;
-      const end = currentIndex + batchSize;
-
-      if (index >= start && index < end) {
-        row.style.display = "block";
-        row.classList.add("score-row");
-      } else {
-        row.style.display = "none";
-      }
-    });
-
-    currentIndex += batchSize;
-    if (currentIndex >= rows.length) currentIndex = 0;
-  }
-
-  updateVisibleMatches();
-  setInterval(updateVisibleMatches, 5000);
-});
-</script>
-
-<footer class="site-footer">
-    <span>Scorefeed – Pixel football oracle on BNB Chain</span>
+  <footer class="site-footer">
+    <span>ScoreFeed · Pixel football oracle on BNB Chain</span>
     <span>© 2025 · Built for Web3 builders</span>
-</footer>
-
+  </footer>
 </body>
 </html>
