--- a/index.html
+++ b/index.html
@@ -32,23 +32,26 @@
   <main>
     <!-- HERO -->
     <section class="hero">
-      <div class="hero-main">
-        <h1>On-chain Football Score Oracle</h1>
-        <p class="hero-lead">
-          Retro scoreboard vibes. Web3-native data.<br />
-          ScoreFeed publishes verified Premier League &amp; La Liga results on BNB Chain.
-        </p>
+     <div class="hero-main">
+  <h1>The football oracle for Web3 builders.</h1>
 
-        <div class="hero-cta">
-          <a href="#devs" class="btn primary">For developers</a>
-          <a href="app.html" class="btn ghost">Open app</a>
-        </div>
+  <p class="hero-lead">
+    ScoreFeed publishes verified Premier League &amp; La Liga match results directly on BNB Chain.
+  </p>
 
-        <p class="hero-note">
-          Humans read scores. Smart contracts need data.<br />
-          ScoreFeed brings real football results on-chain.
-        </p>
-      </div>
+  <p class="hero-sub">
+    Clean, structured football data for prediction markets, betting dApps and AI agents.
+  </p>
+
+  <div class="hero-cta">
+    <a href="app.html" class="btn primary">Open app</a>
+    <a href="#devs" class="btn ghost">For developers</a>
+  </div>
+
+  <p class="hero-note">
+    Humans watch the match. Smart contracts read ScoreFeed.
+  </p>
+</div>
 
       <!-- LIVE SCOREBOARD PANEL (demo) -->
       <div class="hero-panel">
