--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- HERO -->
     <section class="hero">
      <div class="hero-main">
-  <h1>The football oracle for Web3 builders.</h1>
+  <h1 class="hero-title">The football oracle for Web3 builders.</h1>
 
   <p class="hero-lead">
     ScoreFeed publishes verified Premier League &amp; La Liga match results directly on BNB Chain.
@@ -44,8 +44,8 @@
   </p>
 
   <div class="hero-cta">
-    <a href="app.html" class="btn primary">Open app</a>
-    <a href="#devs" class="btn ghost">For developers</a>
+    <a href="app.html" class="btn btn-primary">Open app</a>
+    <a href="#devs" class="btn btn-secondary">For developers</a>
   </div>
 
   <p class="hero-note">
