--- a/index.html
+++ b/index.html
@@ -64,25 +64,39 @@
         </div>
 
         <div id="score-rotator">
-          <div class="panel-row">
-            <span>Premier League</span>
-            <span>Chelsea – Arsenal</span>
-            <span>2 – 1</span>
-            <span class="status-pill status-onchain">On-chain</span>
-          </div>
-          <div class="panel-row">
-            <span>La Liga</span>
-            <span>Real Madrid – Barcelona</span>
-            <span>1 – 1</span>
-            <span class="status-pill status-live">Live</span>
-          </div>
-          <div class="panel-row">
-            <span>Premier League</span>
-            <span>Liverpool – Spurs</span>
-            <span>3 – 0</span>
-            <span class="status-pill status-finished">Final</span>
-          </div>
-        </div>
+  <!-- Row 1: Premier League -->
+  <div class="panel-row">
+    <span class="panel-league">
+      <img src="premier-league.png" class="league-icon" alt="Premier League" />
+      Premier League
+    </span>
+    <span>Chelsea – Arsenal</span>
+    <span>2 – 1</span>
+    <span class="status-pill status-onchain">ON-CHAIN</span>
+  </div>
+
+  <!-- Row 2: La Liga -->
+  <div class="panel-row">
+    <span class="panel-league">
+      <img src="laliga.png" class="league-icon" alt="La Liga" />
+      La Liga
+    </span>
+    <span>Real Madrid – Barcelona</span>
+    <span>1 – 1</span>
+    <span class="status-pill status-live">LIVE</span>
+  </div>
+
+  <!-- Row 3: Premier League -->
+  <div class="panel-row">
+    <span class="panel-league">
+      <img src="premier-league.png" class="league-icon" alt="Premier League" />
+      Premier League
+    </span>
+    <span>Liverpool – Spurs</span>
+    <span>3 – 0</span>
+    <span class="status-pill status-finished">FINAL</span>
+  </div>
+</div>
 
         <div class="panel-foot">
           Live UI preview. Oracle feed and on-chain data coming as the MVP goes live.
