--- a/index.html
+++ b/index.html
@@ -63,16 +63,22 @@
           <span>Status</span>
         </div>
 
-        <div id="score-rotator">
+ <div id="score-rotator">
   <!-- Row 1: Premier League -->
   <div class="panel-row">
     <span class="panel-league">
       <img src="premier-league.png" class="league-icon" alt="Premier League" />
       Premier League
     </span>
-    <span>Chelsea – Arsenal</span>
-    <span>2 – 1</span>
-    <span class="status-pill status-onchain">ON-CHAIN</span>
+    <span class="match-cell">
+      <span class="team-home">Chelsea</span>
+      <span class="match-separator">–</span>
+      <span class="team-away">Arsenal</span>
+    </span>
+    <span class="score-cell">2 – 1</span>
+    <span class="status-cell">
+      <span class="status-pill status-onchain">ON CHAIN</span>
+    </span>
   </div>
 
   <!-- Row 2: La Liga -->
@@ -81,9 +87,15 @@
       <img src="laliga.png" class="league-icon" alt="La Liga" />
       La Liga
     </span>
-    <span>Real Madrid – Barcelona</span>
-    <span>1 – 1</span>
-    <span class="status-pill status-live">LIVE</span>
+    <span class="match-cell">
+      <span class="team-home">Real Madrid</span>
+      <span class="match-separator">–</span>
+      <span class="team-away">Barcelona</span>
+    </span>
+    <span class="score-cell">1 – 1</span>
+    <span class="status-cell">
+      <span class="status-pill status-live">LIVE</span>
+    </span>
   </div>
 
   <!-- Row 3: Premier League -->
@@ -92,9 +104,15 @@
       <img src="premier-league.png" class="league-icon" alt="Premier League" />
       Premier League
     </span>
-    <span>Liverpool – Spurs</span>
-    <span>3 – 0</span>
-    <span class="status-pill status-finished">FINAL</span>
+    <span class="match-cell">
+      <span class="team-home">Liverpool</span>
+      <span class="match-separator">–</span>
+      <span class="team-away">Spurs</span>
+    </span>
+    <span class="score-cell">3 – 0</span>
+    <span class="status-cell">
+      <span class="status-pill status-finished">FINAL</span>
+    </span>
   </div>
 </div>
 
